Perf: prepare for push

--- a/local.env
+++ b/local.env
@@ -1,6 +1,6 @@
-DBUSER = root
-DBPASS = 1234
-DBHOST = localhost
-DBPORT = 3306
-DBNAME = sosmedapp
-JWTKEY = BE!4a|t3rr4
+DBUSER=root
+DBPASS=123au321Z
+DBHOST=localhost
+DBNAME=sosmedapi
+DBPORT=6606
+JWT_KEY = tU645s05m3D4pp5
